# loja_Organicos_teste_final_squad07

./: .gitignore  README.md  cart.db  main.py  pyproject.toml  test_main.py
CADASTRO/: cadastroAPI.py  cadastroApi.py  configuração.py  test_cadastro.py
Carrinho/: carrinho.py
carrinho/: cart.db  main.py  main_test.py  test_main.py
lab_testes/: TESTES.py  carrinho.py
relatorio/: main.py  test_relatorio.py
relatorio/Relatorio_Fastapi/: main.py  test_main.py
relatorio/configs/: db_config.py
relatorio/controllers/: controller.py
relatorio/routes/: route.py
relatorio/tests/: conftest.py  test_relatorio.py
templates/: index.html
