[tool.poetry]
name = "loja-organicos-teste-final-squad07"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "loja_organicos_teste_final_squad07"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pandas = "^1.5.2"
pymongo = "^4.3.3"
pytest = "^7.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
